syntax = "proto3";

package yarn;

service YarnApi {
    // servers
//    rpc insertResLive(Live) returns (stream TaskResult);
//    rpc insertResChannel(Channel) returns (stream TaskResult);
//    rpc insertResVTuber(VTuber) returns (stream TaskResult);
//    rpc insertResAffiliation(Affiliation) returns (stream TaskResult);

    // clients
    rpc insertReqLive(stream Live) returns (TaskResult);
    rpc insertReqChannel(stream Channel) returns (TaskResult);
    rpc insertReqVTuber(stream VTuber) returns (TaskResult);
    rpc insertReqAffiliation(stream Affiliation) returns (TaskResult);
}

message Live {
    string VideoId = 1;
    string ChannelId = 2;
    string Title = 3;
    string Description = 4;
    string ThumbnailUrl = 5;
    string PublishedAt = 6;
    string UpdatedAt = 7;

    string WillStartAt = 8; // status in upcoming
    string StartedAt = 9; // status in live
    enum Status {
        UPCOMING = 0;
        LIVE = 1;
    }
    oneof OverrideSign {
        sint64 override_at = 10;
        Empty empty = 11;
    }
}

message Channel {
    string ChannelId = 1;
    sint64 VTuberId = 2;
    string LogoUrl = 3;
    string PublishedAt = 4;
    string Description = 5;
    oneof OverrideSign {
        sint64 override_at = 6;
        Empty empty = 7;
    }
}

message VTuber {
    sint64 VTuberId = 1;
    string Name = 2;
    uint64 AffiliationId = 3;
    oneof OverrideSign {
        sint64 override_at = 6;
        Empty empty = 7;
    }
}

message Affiliation {
    sint64 AffiliationId = 1;
    string Name = 2;
    oneof OverrideSign {
        sint64 override_at = 3;
        Empty empty = 4;
    }
}

message Empty {}

message TaskResult {
    string Message = 1;
}